add a delayed refresh of the viewer service on form submit. closes #360

--- a/client/src/app/forms/config/types/submit-button/submit-button.type.html
+++ b/client/src/app/forms/config/types/submit-button/submit-button.type.html
@@ -1,7 +1,8 @@
 <cvc-form-buttons>
-  <cvc-org-selector-btn-group [(selectedOrg)]="selectedOrg"
+  <cvc-org-selector-btn-group #orgButton [(selectedOrg)]="selectedOrg"
     [nzSize]="to.submitSize">
     <button type="submit"
+      (click)="orgButton.refreshViewer();"
       nz-button
       cvcOrgSelectorBtn
       nzType="primary"
