Implement suggestions for the about page

--- a/client/src/app/views/pages/pages-about/pages-about.page.html
+++ b/client/src/app/views/pages/pages-about/pages-about.page.html
@@ -25,6 +25,8 @@
                   <p>
                     All content created in CIViC is, and will continue to be, freely available, without restriction with a <a href="https://creativecommons.org/publicdomain/zero/1.0/" target="_blank">Public Domain License</a>. Anyone can contribute to CIViC by simply registering for an account. Users join the community with “Curator” level privileges that allow them to comment or propose additions or revisions on any knowledge in CIViC. Proposed additions and revisions are then reviewed by users with “Editor” or “Admin” level privileges before gaining “Accepted” status. Content that has been Submitted but not yet Accepted should be interpreted and used with caution. Community Curators work together with Editors towards comprehensive and accurate interpretations of the clinical relevance of variants in cancer.
                   </p>
+                  <img src="assets/images/CIViC_principles__shorter.png"
+                    alt="CIViC principles" style="width: 100%">
                 </nz-card>
               </nz-col>
               <nz-col [nzSpan]="10">
@@ -54,7 +56,7 @@
               </nz-col>
               <nz-col [nzSpan]="6">
                 <nz-card nzType="inner"
-                  nzTitle="Affiliations"
+                  nzTitle="Acknowledgements"
                   style="width: 100%">
                   <nz-space nzDirection="vertical">
                     <img *nzSpaceItem src="assets/images/nih-nci-logo.png"
