include gene name in variant quick search results and indexing.;

--- a/client/src/app/components/layout/quicksearch/quicksearch-component.html
+++ b/client/src/app/components/layout/quicksearch/quicksearch-component.html
@@ -13,8 +13,7 @@
     <a [routerLink]="urlForResult(res)">
       <nz-auto-option (click)="searchQuery = ''; refresh()" [nzValue]="urlForResult(res)">
         <span>
-          <i nz-icon [nzType]="iconNameForResult(res)"></i>
-          <span innerHTML={{res.name}}></span><br />
+          <i nz-icon [nzType]="iconNameForResult(res)"></i> &nbsp; <span innerHTML={{res.name}}></span><br />
           <span innerHTML={{res.matchingText}}></span>
         </span>
       </nz-auto-option>
