--- a/client/src/app/components/layout/viewer-button/viewer-button.component.html
+++ b/client/src/app/components/layout/viewer-button/viewer-button.component.html
@@ -1,77 +1,120 @@
 <ng-container *ngIf="viewer$ | ngrxPush as viewer">
-  <nz-space nzAlign="center" nzSize="middle">
-    <a routerLink="/users/{{viewer.id}}/notifications" *nzSpaceItem>
-      <ng-container *ngrxLet="unreadCount$ as unreadCount">
-        <div class="topMenuIcon" nz-tooltip nzTooltipTitle="You have {{unreadCount}} unread notification(s).">
-          <i nz-icon nzType="bell" nzTheme="outline" ></i>
-          <nz-badge class="topBarBadge" nzColor="blue" [nzShowDot]="unreadCount > 0">
-          </nz-badge>
-        </div>
-      </ng-container>
-    </a>
-    <div class="topMenuIcon" nz-dropdown nzTrigger="click" [nzDropdownMenu]="addMenu" nzPlacement="bottomRight" *nzSpaceItem>
-      <i nz-icon nzType="plus" nzTheme="outline" ></i>
-      <i class="topMenuSecondary" nz-icon nzType="caret-down" nzTheme="outline" ></i>
-      <nz-dropdown-menu #addMenu="nzDropdownMenu">
-        <ul nz-menu>
-          <li nz-menu-item>
-            <a routerLink="/evidence/add/submit">
-              Add Evidence
-            </a>
-          </li>
-          <li nz-menu-item>
-            <a routerLink="/assertions/add/submit">
-              Add Assertion
-            </a>
-          </li>
-          <li nz-menu-item>
-            <a routerLink="/sources/add">
-              Suggest Source
-            </a>
-          </li>
-          <li nz-menu-item>
-            <a routerLink="/variant-groups/add/submit">
-              Add Variant Group
-            </a>
-          </li>
-        </ul>
-      </nz-dropdown-menu>
-    </div>
-    <div class="topMenuIcon" nz-dropdown nzTrigger="click" [nzDropdownMenu]="userMenu" nzPlacement="bottomRight" *nzSpaceItem>
-      <cvc-user-avatar [user]="viewer" size="small"></cvc-user-avatar>
-      <i nz-icon class="topMenuSecondary" nzType="caret-down" nzTheme="outline" ></i>
-      <nz-badge *ngIf="viewer.invalidCoi" class="topBarBadge" nzColor="orange" [nzShowDot]="true">
-      </nz-badge>
-      <nz-dropdown-menu #userMenu="nzDropdownMenu">
-        <ul nz-menu>
-          <li nz-menu-item>Signed In as&nbsp;<strong>{{viewer.username}}</strong></li>
-          <li nz-menu-divider></li>
-          <li nz-menu-item *ngIf="viewer.invalidCoi" (click)="this.coiUpdateModalVisible = true">
-            <nz-badge nzColor="orange" [nzShowDot]="true">
-              <strong>
-                Please provide an updated conflict of interest statement.
-              </strong>
-            </nz-badge>
-          </li>
-          <li nz-menu-item>
-            <a routerLink="/users/{{viewer.id}}">
-              Your Profile
-            </a>
-          </li>
-          <li nz-menu-item *ngIf="viewer.isAdmin">
-            <a href="/admin">
-              Admin Console
-            </a>
-          </li>
-          <li nz-menu-divider></li>
-          <li nz-menu-item (click)="signOut()">Sign Out</li>
-        </ul>
-      </nz-dropdown-menu>
-    </div>
+  <nz-space nzDirection="horizontal"
+    nzSize="middle"
+    *ngrxLet="unreadCount$ as unreadCount">
+    <button class="add-btn"
+      nz-button
+      nzSize="large"
+      nzShape="round"
+      nz-dropdown
+      nzTrigger="click"
+      [nzDropdownMenu]="addMenu"
+      nzPlacement="bottomRight"
+      *nzSpaceItem>
+      Add
+      <i nz-icon
+        nzType="caret-down"
+        nzTheme="outline"></i>
+    </button>
+    <nz-badge [nzCount]="unreadCount"
+      nzShowZero
+      [nzOverflowCount]="999"
+      [nzStyle]="{ backgroundColor: '#096dd9', color: '#fff1f0',  boxShadow: '0 0 0 1px #1890ff inset' }"
+      *nzSpaceItem>
+      <button class="notification-btn"
+        nz-button
+        nzSize="large"
+        nzShape="circle"
+        nzType="link"
+        routerLink="/users/{{viewer.id}}/notifications">
+        <i nz-icon
+          nzType="bell"
+          nzTheme="outline"></i>
+      </button>
+    </nz-badge>
+    <button class="viewer-btn"
+      nz-button
+      nzSize="large"
+      nzShape="round"
+      nz-dropdown
+      nzTrigger="click"
+      [nzDropdownMenu]="userMenu"
+      nzPlacement="bottomRight"
+      *nzSpaceItem>
+      <nz-space nzDirection="horizontal"
+        nzSize="small">
+        <cvc-user-avatar [user]="viewer"
+          [size]="22"
+          shape="circle"
+          [ngClass]="{ 'update-coi': viewer.invalidCoi }"
+          *nzSpaceItem></cvc-user-avatar>
+        <div class="viewer-name"
+          *nzSpaceItem>{{ viewer.username }}</div>
+        <i nz-icon
+          nzType="caret-down"
+          nzTheme="outline"
+          *nzSpaceItem></i>
+      </nz-space>
+    </button>
   </nz-space>
 
-
+  <nz-dropdown-menu #userMenu="nzDropdownMenu">
+    <ul nz-menu>
+      <li nz-menu-item
+        *ngIf="viewer.invalidCoi">
+        <button (click)="this.coiUpdateModalVisible = true"
+          nz-button
+          nzType="primary"
+          nzShape="round"
+          nzSize="small" nzDanger nzBlock>
+          <i nz-icon nzType="exclamation-circle"></i>
+          Please update COI statement
+        </button>
+      </li>
+      <li nz-menu-divider
+        *ngIf="viewer.invalidCoi">
+      <li nz-menu-item>
+        <a routerLink="/users/{{viewer.id}}">
+          Your Profile
+        </a>
+      </li>
+      <li nz-menu-item
+        *ngIf="viewer.isAdmin">
+        <a href="/admin">
+          Admin Console
+        </a>
+      </li>
+      <li nz-menu-divider></li>
+      <li nz-menu-item
+        (click)="signOut()">Sign Out</li>
+    </ul>
+  </nz-dropdown-menu>
+  <nz-dropdown-menu #addMenu="nzDropdownMenu">
+    <ul nz-menu>
+      <li nz-menu-item>
+        <a routerLink="/evidence/add/submit">
+          Evidence Item
+        </a>
+      </li>
+      <li nz-menu-item>
+        <a routerLink="/assertions/add/submit">
+          Assertion
+        </a>
+      </li>
+      <li nz-menu-item>
+        <a routerLink="/sources/add">
+          Source Suggestion
+        </a>
+      </li>
+      <li nz-menu-item>
+        <a routerLink="/variant-groups/add/submit">
+          Variant Group
+        </a>
+      </li>
+    </ul>
+  </nz-dropdown-menu>
 </ng-container>
+
 <nz-modal [(nzVisible)]="this.coiUpdateModalVisible"
   [nzContent]="coiModalContent"
   [nzTitle]="coiModalTitle"
