--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -1,13 +1,17 @@
 <nz-card [nzTitle]="titleTemplate">
   <nz-table #evidenceTable
-    [nzData]="(evidence$ | ngrxPush)"
-    [nzLoading]="(isLoading$ | ngrxPush)"
+    [nzVirtualItemSize]="50"
+    [nzVirtualForTrackBy]="trackByIndex"
+    [nzData]="evidence$ | ngrxPush"
+    [nzLoading]="isLoading$ | ngrxPush"
+    [nzScroll]="{ x: '1200px', y: '240px' }"
     [nzFrontPagination]="false"
     [nzShowPagination]="false">
 
     <thead (nzSortOrderChange)="onSortChanged($event)">
       <tr>
-        <th nzWidth="2%" *ngIf="mode == 'select'" >
+        <th nzWidth="2%"
+          *ngIf="mode == 'select'">
         </th>
         <th nzWidth="5%"
           [nzColumnKey]="sortColumns.Id"
@@ -98,7 +102,7 @@
         </th>
       </tr>
       <tr>
-        <th *ngIf="mode == 'select'" >
+        <th *ngIf="mode == 'select'">
         </th>
         <th>
           <cvc-clearable-input-filter [(inputModel)]="eidInput"
@@ -277,118 +281,129 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let eid of evidenceTable.data">
-        <td *ngIf="mode == 'select'" >
-          <label nz-checkbox [nzChecked]="this.selectedEvidenceIds.has(eid.id)" (nzCheckedChange)="onEvidenceCheckboxClicked($event, eid)"></label>
-        </td>
-        <td>
-          <cvc-evidence-tag [evidence]="eid"></cvc-evidence-tag>
-        </td>
-        <td *ngIf="displayGeneAndVariant">
-          <cvc-gene-tag [gene]="eid.gene"></cvc-gene-tag>
-        </td>
-        <td *ngIf="displayGeneAndVariant">
-          <cvc-variant-tag [variant]="eid.variant"></cvc-variant-tag>
-        </td>
-        <td>
-          <ng-container *ngIf="eid.disease; else diseaseElse">
-            <cvc-disease-tag [disease]="eid.disease"></cvc-disease-tag>
-          </ng-container>
-          <ng-template #diseaseElse>
-            <i>N/A</i>
-          </ng-template>
-        </td>
-        <td>
-          <p *ngIf="eid.drugs.length > 0; else drugsElse"
-            nz-typography>
-            <cvc-tag-list>
-              <span *ngFor="let drug of eid.drugs">
+      <ng-template nz-virtual-scroll
+        let-eid
+        let-index="index">
+        <tr>
+          <td *ngIf="mode == 'select'">
+            <label nz-checkbox
+              [nzChecked]="this.selectedEvidenceIds.has(eid.id)"
+              (nzCheckedChange)="onEvidenceCheckboxClicked($event, eid)"></label>
+          </td>
+          <td>
+            <cvc-evidence-tag [evidence]="eid"></cvc-evidence-tag>
+          </td>
+          <td *ngIf="displayGeneAndVariant">
+            <cvc-gene-tag [gene]="eid.gene"></cvc-gene-tag>
+          </td>
+          <td *ngIf="displayGeneAndVariant">
+            <cvc-variant-tag [variant]="eid.variant"></cvc-variant-tag>
+          </td>
+          <td>
+            <ng-container *ngIf="eid.disease; else diseaseElse">
+              <cvc-disease-tag [disease]="eid.disease"></cvc-disease-tag>
+            </ng-container>
+            <ng-template #diseaseElse>
+              <i>N/A</i>
+            </ng-template>
+          </td>
+          <td>
+            <p *ngIf="eid.drugs.length > 0; else drugsElse"
+              nz-typography>
+              <cvc-tag-list>
+                <span *ngFor="let drug of eid.drugs">
                 <cvc-drug-tag [drug]="drug"></cvc-drug-tag>
               </span>
-            </cvc-tag-list>
-            <span *ngIf="eid.drugs.length > 1">
+              </cvc-tag-list>
+              <span *ngIf="eid.drugs.length > 1">
               ({{ eid.drugInteractionType | titlecase }})
             </span>
-          </p>
-          <ng-template #drugsElse>
-            <i>N/A</i>
-          </ng-template>
-        </td>
-        <td nzAlign="center">
-          <i nz-icon
-            nzType="align-left"
-            nz-tooltip
-            nzTooltipPlacement="top"
-            [nzTooltipTitle]="eid.description"></i>
-        </td>
-        <td nzAlign="center">
-          {{ eid.evidenceLevel }}
-        </td>
-        <td nzAlign="center">
-          <i nz-icon
-            [nzType]="eid.evidenceType | evidenceEnumDisplay: 'icon-name'"
-            nz-tooltip
-            nzTooltipPlacement="top"
-            [nzTooltipTitle]="eid.evidenceType | evidenceEnumDisplay"></i>
-        </td>
-        <td nzAlign="center">
-          <i nz-icon
-            [nzType]="eid.evidenceDirection | evidenceEnumDisplay: 'icon-name'"
-            nz-tooltip
-            nzTooltipPlacement="top"
-            [nzTooltipTitle]="eid.evidenceDirection | evidenceEnumDisplay"></i>
-        </td>
-        <td nzAlign="center">
-          <i nz-icon
-            [nzType]="eid.clinicalSignificance| evidenceEnumDisplay: 'icon-name'"
-            nz-tooltip
-            nzTooltipPlacement="top"
-            [nzTooltipTitle]="eid.clinicalSignificance | evidenceEnumDisplay"></i>
-        </td>
-        <td nzAlign="center">
-          <i nz-icon
-            [nzType]="eid.variantOrigin| evidenceEnumDisplay: 'icon-name'"
-            nz-tooltip
-            nzTooltipPlacement="top"
-            [nzTooltipTitle]="eid.variantOrigin | evidenceEnumDisplay"></i>
-        </td>
-        <td nzAlign="center">
-          {{ eid.evidenceRating }}
-          <i nz-icon
-            nzType="star"
-            nzTheme="fill"
-            nz-tooltip
-            nzTooltipPlacement="top"></i>
-        </td>
-      </tr>
-      <!-- Load More button row -->
-      <ng-container *ngrxLet="pageInfo$ as pageInfo">
-        <tr *ngIf="pageInfo.hasNextPage">
-          <td colspan="20">
-            <button *ngIf="pageInfo.hasNextPage"
-              (click)="loadMore(pageInfo.endCursor)"
-              nz-button
-              nzBlock>Load {{this.fetchMorePageSize}} More</button>
+            </p>
+            <ng-template #drugsElse>
+              <i>N/A</i>
+            </ng-template>
+          </td>
+          <td nzAlign="center">
+            <i nz-icon
+              nzType="align-left"
+              nz-tooltip
+              nzTooltipTrigger="click"
+              nzTooltipPlacement="top"
+              [nzTooltipTitle]="eid.description"></i>
+          </td>
+          <td nzAlign="center">
+            {{ eid.evidenceLevel }}
+          </td>
+          <td nzAlign="center">
+            <i nz-icon
+              [nzType]="eid.evidenceType | evidenceEnumDisplay: 'icon-name'"
+              nz-tooltip
+              nzTooltipPlacement="top"
+              [nzTooltipTitle]="eid.evidenceType | evidenceEnumDisplay"></i>
+          </td>
+          <td nzAlign="center">
+            <i nz-icon
+              [nzType]="eid.evidenceDirection | evidenceEnumDisplay: 'icon-name'"
+              nz-tooltip
+              nzTooltipPlacement="top"
+              [nzTooltipTitle]="eid.evidenceDirection | evidenceEnumDisplay"></i>
+          </td>
+          <td nzAlign="center">
+            <i nz-icon
+              [nzType]="eid.clinicalSignificance| evidenceEnumDisplay: 'icon-name'"
+              nz-tooltip
+              nzTooltipPlacement="top"
+              [nzTooltipTitle]="eid.clinicalSignificance | evidenceEnumDisplay"></i>
+          </td>
+          <td nzAlign="center">
+            <i nz-icon
+              [nzType]="eid.variantOrigin| evidenceEnumDisplay: 'icon-name'"
+              nz-tooltip
+              nzTooltipPlacement="top"
+              [nzTooltipTitle]="eid.variantOrigin | evidenceEnumDisplay"></i>
+          </td>
+          <td nzAlign="center">
+            {{ eid.evidenceRating }}
+            <i nz-icon
+              nzType="star"
+              nzTheme="fill"
+              nz-tooltip
+              nzTooltipPlacement="top"></i>
           </td>
         </tr>
-      </ng-container>
+      </ng-template>
+      <!-- Load More button row -->
+      <!-- <ng-container *ngrxLet="pageInfo$ as pageInfo">
+           <tr *ngIf="pageInfo.hasNextPage">
+           <td colspan="20">
+           <button *ngIf="pageInfo.hasNextPage"
+           (click)="loadMore(pageInfo.endCursor)"
+           nz-button
+           nzBlock>Load {{this.fetchMorePageSize}} More</button>
+           </td>
+           </tr>
+           </ng-container> -->
     </tbody>
   </nz-table>
 </nz-card>
 
 <ng-template #titleTemplate>
-  <i nz-icon nzType="civic:evidence"></i>
+  <i nz-icon
+    nzType="civic:evidence"></i>
   <ng-container *ngIf="this.cvcTitleTemplate">
     <ng-template [ngTemplateOutlet]="cvcTitleTemplate"></ng-template>
   </ng-container>
   <ng-container *ngIf="this.cvcTitle">
     {{ this.cvcTitle }}
   </ng-container>
-  <span *ngIf="(filteredCount$ | ngrxPush) as filteredCount; else noData" nz-typography nzType="secondary">
+  <span *ngIf="(filteredCount$ | ngrxPush) as filteredCount; else noData"
+    nz-typography
+    nzType="secondary">
     ({{totalCount}} total, showing {{visibleCount}} of {{filteredCount}} filtered)
   </span>
   <ng-template #noData>
-    <span nz-typography nzType="secondary">
+    <span nz-typography
+      nzType="secondary">
       (0 total)
     </span>
   </ng-template>
