--- a/client/src/app/components/shared/clearable-input-filter/clearable-input-filter.component.html
+++ b/client/src/app/components/shared/clearable-input-filter/clearable-input-filter.component.html
@@ -1,6 +1,7 @@
 <nz-input-group [nzSuffix]="clearTmpl">
   <input type="text"
     nz-input
+    nzSize="small"
     [placeholder]="placeholderText ? placeholderText : ''"
     [(ngModel)]="inputModel"
     (ngModelChange)="onModelUpdated()" />
