--- a/client/src/themes/overrides/entity-page-header.overrides.less
+++ b/client/src/themes/overrides/entity-page-header.overrides.less
@@ -24,6 +24,7 @@
 
   .ant-page-header-content {
     padding-top: 0;
+    padding-bottom: @default-padding-sm;
   }
 
   .ant-page-header-heading-extra {
