--- a/client/src/app/views/evidence/evidence-home/evidence-home.page.html
+++ b/client/src/app/views/evidence/evidence-home/evidence-home.page.html
@@ -10,7 +10,7 @@
     </button>
   </ng-container>
 </ng-template>
-<nz-page-header class="site-page-header" cvc-auto-height-div>
+<nz-page-header class="site-page-header" cvcAutoHeightDiv>
   <nz-page-header-title>
     <i nz-icon
       nzType="civic:evidence"></i> CIViC Evidence
