--- a/client/src/app/forms/assertion-revise/assertion-revise.form.html
+++ b/client/src/app/forms/assertion-revise/assertion-revise.form.html
@@ -34,10 +34,10 @@
   </ng-template>
 </nz-spin>
 
-<div nz-row>
+<!-- <div nz-row>
   <div nz-col
     nzSpan="24">
     <ngx-json-viewer *ngIf="formModel"
       [json]="formModel"></ngx-json-viewer>
   </div>
-</div>
+</div> -->
