fixed page-header padding

--- a/client/src/themes/overrides/entity-page-header.overrides.less
+++ b/client/src/themes/overrides/entity-page-header.overrides.less
@@ -12,7 +12,7 @@
     background-color: #f0f0f0;
     border-top-left-radius: @border-radius-md;
     border-top-right-radius: @border-radius-md;
-    margin-top: -@default-padding-md;
+    margin-top: -12px;
     margin-left: -@default-padding-md;
     margin-right: -@default-padding-md;
     margin-bottom: @default-padding-md;
