Truncate long drug and disease names in the assertion/evidence browse tables

--- a/client/src/app/components/assertions/assertions-popover/assertion-popover.component.html
+++ b/client/src/app/components/assertions/assertions-popover/assertion-popover.component.html
@@ -94,7 +94,7 @@
 
         <nz-descriptions-item nzTitle="Disease" nzSpan="2">
           <ng-container *ngIf="assertion.disease; else noDisease">
-            <cvc-disease-tag [enablePopover]="false" [disease]="assertion.disease"></cvc-disease-tag>
+            <cvc-disease-tag [enablePopover]="false" [disease]="assertion.disease" [truncateLongName]="true"></cvc-disease-tag>
           </ng-container>
           <ng-template #noDisease>
             N/A
@@ -105,7 +105,7 @@
           nzSpan="2"
           *ngIf="assertion.drugs.length > 0">
           <span *ngFor="let drug of assertion.drugs">
-            <cvc-drug-tag [enablePopover]="false" [drug]="drug"></cvc-drug-tag>
+            <cvc-drug-tag [enablePopover]="false" [drug]="drug" [truncateLongName]="true"></cvc-drug-tag>
           </span>
           <ng-container *ngIf="assertion.drugs.length > 1">
             {{ assertion.drugInteractionType | titlecase }}
