--- a/client/src/app/components/assertions/assertions-table/assertions-table.component.html
+++ b/client/src/app/components/assertions/assertions-table/assertions-table.component.html
@@ -221,7 +221,7 @@
         </td>
         <td>
           <ng-container *ngIf="aid.disease.name; else diseaseElse">
-            <cvc-disease-tag [disease]="aid.disease"></cvc-disease-tag>
+            <cvc-disease-tag [disease]="aid.disease" [truncateLongName]="true"></cvc-disease-tag>
           </ng-container>
           <ng-template #diseaseElse>
             <i>N/A</i>
@@ -231,7 +231,7 @@
           <p *ngIf="aid.drugs.length > 0; else drugsElse"
             nz-typography>
             <span *ngFor="let drug of aid.drugs; last as isLast">
-                        <cvc-drug-tag [drug]="drug"></cvc-drug-tag>
+                        <cvc-drug-tag [drug]="drug" [truncateLongName]="true"></cvc-drug-tag>
                       </span>
             <span *ngIf="aid.drugs.length > 1">
                         ({{ aid.drugInteractionType | titlecase }})
