--- a/client/src/app/components/source-suggestions/source-suggestions-table/source-suggestions-table.component.html
+++ b/client/src/app/components/source-suggestions/source-suggestions-table/source-suggestions-table.component.html
@@ -140,8 +140,12 @@
           <td>
             <cvc-disease-tag *ngIf="suggestion.disease" [disease]="suggestion.disease"></cvc-disease-tag>
           </td>
-          <td>
-            {{ suggestion.initialComment }}
+          <td nzAlign="center"
+            nz-tooltip
+            nzTooltipPlacement="top"
+            [nzTooltipTitle]="suggestion.initialComment">
+            <i nz-icon
+              nzType="comment"></i>
           </td>
           <td *ngIf="viewer.signedIn">
             <nz-button-group>
