--- a/client/src/app/views/evidence/evidence-home/evidence-home.page.html
+++ b/client/src/app/views/evidence/evidence-home/evidence-home.page.html
@@ -31,11 +31,11 @@
       <nz-col nzFlex="600px"
         class="header-description">
         <h2>Evidence Items</h2>
-        <p>The clinical evidence statement is a piece of information that has been manually curated from trustable medical literature about a variant or genomic ‘event’ that has implications in cancer predisposition, diagnosis (aka molecular classification), prognosis, or predictive response to therapy.</p>
+        <p nz-typography nzEllipsis nzExpandable [nzEllipsisRows]="2">The clinical evidence statement is a piece of information that has been manually curated from trustable medical literature about a variant or genomic ‘event’ that has implications in cancer predisposition, diagnosis (aka molecular classification), prognosis, or predictive response to therapy.</p>
       </nz-col>
       <nz-col nzFlex="auto"
         class="header-links">
-        <nz-space nzDirection="vertical">
+        <nz-space nzDirection="vertical" class="docs-buttons">
           <a nz-button
             href="https://civic.readthedocs.io/en/latest/model/evidence.html"
             target="_blank"
@@ -45,7 +45,7 @@
             <i nz-icon
               nzType="link"
               nzTheme="outline"></i>
-            Knowledge Model Docs
+            View Evidence Model Docs
         </a>
           <a nz-button
             href="https://civic.readthedocs.io/en/latest/curating/evidence.html"
@@ -56,7 +56,7 @@
             <i nz-icon
               nzType="link"
               nzTheme="outline"></i>
-            Curation Docs
+            View Evidence Curation Docs
         </a>
         </nz-space>
       </nz-col>
