updated variant groups table, home page

--- a/client/src/app/views/evidence/evidence-home/evidence-home.page.html
+++ b/client/src/app/views/evidence/evidence-home/evidence-home.page.html
@@ -12,6 +12,7 @@
 </ng-template>
 <nz-page-header class="site-page-header">
   <nz-page-header-content>
+    <!-- title, description, docs links -->
     <nz-row class="header-content">
       <nz-col nzFlex="64px"
         class="header-icon">
