--- a/client/src/app/components/variant-groups/variant-groups-table/variant-groups-table.component.html
+++ b/client/src/app/components/variant-groups/variant-groups-table/variant-groups-table.component.html
@@ -1,6 +1,7 @@
 <nz-card [nzTitle]="titleTemplate">
   <ng-container *ngIf="{ value: data$ | ngrxPush } as data">
     <nz-table #variantGroupsTable
+      nzSize="small"
       [nzData]="(variantGroups$ | ngrxPush)"
       [nzLoading]="(isLoading$ | ngrxPush)"
       [nzFrontPagination]="false"
