--- a/client/src/app/views/assertions/assertions-home/assertions-home.page.html
+++ b/client/src/app/views/assertions/assertions-home/assertions-home.page.html
@@ -13,6 +13,7 @@
 
 <nz-page-header class="site-page-header">
   <nz-page-header-content>
+    <!-- title, description, docs links -->
     <nz-row class="header-content">
       <nz-col nzFlex="64px"
         class="header-icon">
