--- a/client/src/app/forms/source-submit/source-submit.form.html
+++ b/client/src/app/forms/source-submit/source-submit.form.html
@@ -1,4 +1,11 @@
+<nz-space nzDirection="vertical">
+  <nz-card *nzSpaceItem>
+    <nz-typography>
+      If you have a source publication that you believe to contain research relevant to CIViC's curation efforts, the community would appreciate your input! Please specify as many details as you can using the form below (only the Pubmed ID and Comment are required). Your suggested source will be placed in the <a routerLink="/curation/queues/pending-sources">source curation queue</a>, and you will be given a suggestion credit if your suggestion results in a new Evidence Item added to the CIViC database.
+    </nz-typography>
+  </nz-card>
 <nz-spin nzTip="Submitting"
+  *nzSpaceItem
   [nzSpinning]="this.loading">
   <form nz-form
     [formGroup]="formGroup"
@@ -34,3 +41,4 @@
     </ng-container>
   </ng-template>
 </nz-spin>
+</nz-space>
