add introductory news item

--- a/client/src/app/views/welcome/welcome.component.html
+++ b/client/src/app/views/welcome/welcome.component.html
@@ -46,6 +46,25 @@
           <nz-list-item>
             <nz-list-item-meta>
               <nz-list-item-meta-title>
+                <span>Welcome to CIViC 2.0!</span>
+                <br/>
+                <span nz-typography
+                  nzType="secondary">
+                  April 9th, 2022
+                </span>
+              </nz-list-item-meta-title>
+            </nz-list-item-meta>
+              CIViC 2.0 features a completely redesigned user interface and a more powerful GraphQL API. 
+              It provides many new ways to browse the knowledgebase while retaining the CIViC knowledge model you are already familiar with. Furthermore, existing links to CIViC entities will continue to function as before.
+              If you have any questions, comments, or would like help adapting an existing integration to our new API, please email us at <a href="mailto:help@civicdb.org">help@civicdb.org</a>.
+              We have also prepared an introductory video tour of the new interface, please <a href="https://www.youtube.com/watch?v=bpVkSP7qvgc" target="_blank">check it out</a>!
+            <nz-list-item-extra style="padding-top: 30px;">
+              <iframe width="250" src="https://www.youtube.com/embed/bpVkSP7qvgc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </nz-list-item-extra>
+          </nz-list-item>
+          <nz-list-item>
+            <nz-list-item-meta>
+              <nz-list-item-meta-title>
                 <span>Pediatric Cancer Variants</span>
                 <br/>
                 <span nz-typography
