tag-input working with same show/hide logic as others

--- a/client/src/app/forms/config/types/tag-input/tag-input.type.html
+++ b/client/src/app/forms/config/types/tag-input/tag-input.type.html
@@ -1,9 +1,8 @@
-<ng-container *ngIf="!tagVisible; else tagItem">
+<ng-container *ngIf="!formControl.value; else tagItem">
   <input nz-input
     [formControl]="formControl"
     [formlyAttributes]="field"
-    (blur)="handleInputConfirm()"
-    (keydown.enter)="handleInputConfirm()" />
+    (keydown.enter)="onEnter($event)"/>
 </ng-container>
 <ng-template #tagItem>
   <nz-tag>{{formControl.value}}</nz-tag>
