added placeholder to cvc-textarea

--- a/client/src/app/forms/config/types/textarea-base/textarea-base.type.html
+++ b/client/src/app/forms/config/types/textarea-base/textarea-base.type.html
@@ -1,4 +1,6 @@
 <textarea nz-input
-  [nzAutosize]="to.autosize"
   [formControl]="formControl"
-  [formlyAttributes]="field"></textarea>
+  [formlyAttributes]="field"
+  [nzAutosize]="to.autosize"
+  [placeholder]="to.placeholder">
+</textarea>
