get clinvar editing fully working

--- a/client/src/app/forms/variant-revise/variant-revise.form.html
+++ b/client/src/app/forms/variant-revise/variant-revise.form.html
@@ -48,4 +48,5 @@
      <ngx-json-viewer *ngIf="formGroup"
      [json]="formGroup.value"></ngx-json-viewer>
      </div>
-     </div> -->
+     </div>
+ -->
