Fix second occurrence of incorrect tooltip

--- a/client/src/app/views/variants/variants-detail/variants-summary/variants-summary.page.html
+++ b/client/src/app/views/variants/variants-detail/variants-summary/variants-summary.page.html
@@ -288,7 +288,7 @@
                 <!-- representative transcript -->
                 <nz-descriptions-item nzTitle="Transcript"
                   nzColumn="5">
-                  <cvc-link-tag tooltip="View on Esembl"
+                  <cvc-link-tag tooltip="View on Ensembl"
                     [href]="'http://www.ensembl.org/Homo_sapiens/transview?transcript=' + coords.representativeTranscript">
                     {{ coords.representativeTranscript }}
                   </cvc-link-tag>
