evidence-table virtual scroll, layout done

--- a/client/src/app/components/diseases/cvc-disease-tag/cvc-disease-tag.component.html
+++ b/client/src/app/components/diseases/cvc-disease-tag/cvc-disease-tag.component.html
@@ -33,7 +33,7 @@
 
 <ng-template #tagContent>
   <i nz-icon nzType="civic-disease" nzTheme="twotone" nzTwotoneColor="#E62F76"></i>
-  <ng-container *ngIf="this.truncateLongName; else fullName">
+  <ng-container *ngIf="truncateLongName; else fullName">
     {{ disease.name | truncate: 27 }}
   </ng-container>
   <ng-template #fullName>
