--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -3,28 +3,29 @@
   [nzExtra]="loadMoreBtn">
   <ng-template #loadMoreBtn>
     <ng-container *ngrxLet="pageInfo$ as pageInfo">
-      <button *ngIf="pageInfo.hasNextPage"
+      <button [disabled]="!pageInfo.hasNextPage"
+        nzSize="small"
         (click)="loadMore(pageInfo.endCursor)"
         nz-button
         nzBlock>Load {{fetchMorePageSize}} More</button>
     </ng-container>
   </ng-template>
-  <nz-table #evidenceTable
-    [cvcAutoHeightTable]="30"
+  <nz-table #virtualTable
+    [cvcAutoHeightTable]="20"
     nzSize="small"
     [nzVirtualForTrackBy]="trackByIndex"
     [nzData]="evidence$ | ngrxPush"
     [nzLoading]="isLoading$ | ngrxPush"
-    [nzScroll]="{ x: '800px', y: '200px' }"
+    [nzScroll]="{ x: '100%', y: '600px' }"
     [nzFrontPagination]="false"
     [nzShowPagination]="false">
 
     <thead (nzSortOrderChange)="onSortChanged($event)">
       <tr>
-        <th nzWidth="2%"
+        <th nzWidth="25px" nzLeft
           *ngIf="mode == 'select'">
         </th>
-        <th nzWidth="5%"
+        <th nzWidth="100px" nzLeft
           [nzColumnKey]="sortColumns.Id"
           [nzSortFn]="true"
           nz-tooltip
@@ -32,7 +33,7 @@
           EID
         </th>
         <th *ngIf="displayGeneAndVariant"
-          nzWidth="10%"
+          nzWidth="120px"
           [nzColumnKey]="sortColumns.GeneSymbol"
           [nzSortFn]="true"
           nz-tooltip
@@ -40,30 +41,30 @@
           Gene
         </th>
         <th *ngIf="displayGeneAndVariant"
-          nzWidth="10%"
+          nzWidth="200px"
           [nzColumnKey]="sortColumns.VariantName"
           [nzSortFn]="true"
           nz-tooltip
           nzTooltipTitle="Variant Name">
           Variant
         </th>
-        <th nzWidth="20%"
+        <th nzWidth="200px"
           [nzColumnKey]="sortColumns.DiseaseName"
           [nzSortFn]="true">
           Diseases
         </th>
-        <th nzWidth="20%"
+        <th nzWidth="300px"
           [nzColumnKey]="sortColumns.DrugName"
           [nzSortFn]="true">
           Drugs
         </th>
-        <th nzWidth="5%"
+        <th nzWidth="60px"
           [nzColumnKey]="sortColumns.Description"
           nzAlign="center"
           [nzSortFn]="true">
-          Description
+          DESC
         </th>
-        <th nzWidth="5%"
+        <th nzWidth="60px"
           [nzColumnKey]="sortColumns.EvidenceLevel"
           [nzSortFn]="true"
           nzAlign="center"
@@ -71,7 +72,7 @@
           nzTooltipTitle="Evidence Level">
           EL
         </th>
-        <th nzWidth="5%"
+        <th nzWidth="60px"
           [nzColumnKey]="sortColumns.EvidenceType"
           [nzSortFn]="true"
           nzAlign="center"
@@ -79,7 +80,7 @@
           nzTooltipTitle="Evidence Type">
           ET
         </th>
-        <th nzWidth="5%"
+        <th nzWidth="60px"
           [nzColumnKey]="sortColumns.EvidenceDirection"
           [nzSortFn]="true"
           nzAlign="center"
@@ -87,7 +88,7 @@
           nzTooltipTitle="Evidence Direction">
           ED
         </th>
-        <th nzWidth="5%"
+        <th nzWidth="60px"
           [nzColumnKey]="sortColumns.ClinicalSignificance"
           [nzSortFn]="true"
           nzAlign="center"
@@ -95,7 +96,7 @@
           nzTooltipTitle="Clinical Significance">
           CS
         </th>
-        <th nzWidth="5%"
+        <th nzWidth="60px"
           [nzColumnKey]="sortColumns.VariantOrigin"
           [nzSortFn]="true"
           nzAlign="center"
@@ -103,7 +104,7 @@
           nzTooltipTitle="Variant Origin">
           VO
         </th>
-        <th nzWidth="5%"
+        <th nzWidth="60px"
           [nzColumnKey]="sortColumns.EvidenceRating"
           [nzSortFn]="true"
           nzAlign="center"
@@ -112,10 +113,10 @@
           R
         </th>
       </tr>
-      <tr>
-        <th *ngIf="mode == 'select'">
+      <tr class="filter-row">
+        <th *ngIf="mode == 'select'" nzLeft>
         </th>
-        <th>
+        <th nzLeft>
           <cvc-clearable-input-filter [(inputModel)]="eidInput"
             [onInputChanged]="textInputCallback"></cvc-clearable-input-filter>
         </th>
@@ -192,7 +193,7 @@
               nzLabel="N/A"></nz-option>
           </nz-select>
         </th>
-        <th nzWidth="5%"
+        <th
           nzAlign="center">
           <nz-select nzAllowClear
             nzPlaceHolder="All"
@@ -249,7 +250,7 @@
             </nz-option-group>
           </nz-select>
         </th>
-        <th nzWidth="5%"
+        <th
           nzAlign="center">
           <nz-select nzAllowClear
             nzPlaceHolder="All"
@@ -270,7 +271,7 @@
               nzLabel="Germline or Somatic"></nz-option>
           </nz-select>
         </th>
-        <th nzWidth="5%"
+        <th
           nzAlign="center">
           <nz-select nzAllowClear
             nzPlaceHolder="All"
@@ -296,23 +297,23 @@
         let-eid
         let-index="index">
         <tr>
-          <td *ngIf="mode == 'select'">
+          <td *ngIf="mode == 'select'" nzLeft>
             <label nz-checkbox
               [nzChecked]="this.selectedEvidenceIds.has(eid.id)"
               (nzCheckedChange)="onEvidenceCheckboxClicked($event, eid)"></label>
           </td>
-          <td>
+          <td nzLeft>
             <cvc-evidence-tag [evidence]="eid"></cvc-evidence-tag>
           </td>
           <td *ngIf="displayGeneAndVariant">
-            <cvc-gene-tag [gene]="eid.gene"></cvc-gene-tag>
+            <cvc-gene-tag [gene]="eid.gene" [truncateLongName]="true"></cvc-gene-tag>
           </td>
           <td *ngIf="displayGeneAndVariant">
-            <cvc-variant-tag [variant]="eid.variant"></cvc-variant-tag>
+            <cvc-variant-tag [variant]="eid.variant" [truncateLongName]="true"></cvc-variant-tag>
           </td>
           <td>
             <ng-container *ngIf="eid.disease; else diseaseElse">
-              <cvc-disease-tag [disease]="eid.disease"></cvc-disease-tag>
+              <cvc-disease-tag [disease]="eid.disease" [truncateLongName]="true"></cvc-disease-tag>
             </ng-container>
             <ng-template #diseaseElse>
               <i>N/A</i>
@@ -322,12 +323,12 @@
             <div *ngIf="eid.drugs.length > 0; else drugsElse">
               <cvc-tag-list>
                 <span *ngFor="let drug of eid.drugs">
-                <cvc-drug-tag [drug]="drug"></cvc-drug-tag>
-              </span>
+                  <cvc-drug-tag [drug]="drug" [truncateLongName]="true"></cvc-drug-tag>
+                </span>
               </cvc-tag-list>
               <span *ngIf="eid.drugs.length > 1">
-              ({{ eid.drugInteractionType | titlecase }})
-            </span>
+                ({{ eid.drugInteractionType | titlecase }})
+              </span>
             </div>
             <ng-template #drugsElse>
               <i>N/A</i>
