--- a/client/src/app/components/shared/clearable-input-filter/clearable-input-filter.component.less
+++ b/client/src/app/components/shared/clearable-input-filter/clearable-input-filter.component.less
@@ -1,3 +1,12 @@
+@input-height: 16px;
 :host {
   display: block;
+  height: @input-height+ 6px;
+  ::ng-deep nz-input-group {
+    padding: 2px;
+    height: @input-height + 6px;
+    input {
+      height: 16px;
+    }
+  }
 }
