added tooltip for evidence description column

--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -61,7 +61,9 @@
         <th nzWidth="60px"
           [nzColumnKey]="sortColumns.Description"
           nzAlign="center"
-          [nzSortFn]="true">
+          [nzSortFn]="true"
+          nz-tooltip
+          nzTooltipTitle="Evidence Description">
           DESC
         </th>
         <th nzWidth="60px"
