--- a/client/src/app/forms/evidence-submit/evidence-submit.form.html
+++ b/client/src/app/forms/evidence-submit/evidence-submit.form.html
@@ -41,12 +41,11 @@
     </ng-template>
   </nz-spin>
   </nz-space>
-  <!-- 
-  <div nz-row>
+
+  <!-- <div nz-row>
     <div nz-col
       nzSpan="24">
       <ngx-json-viewer *ngIf="formModel"
         [json]="formModel"></ngx-json-viewer>
     </div>
-  </div>
-  -->
+  </div> -->
