card-table CSS overrides ensure minimum height for updated virtualscroll tables

--- a/client/src/themes/overrides/card-table.overrides.less
+++ b/client/src/themes/overrides/card-table.overrides.less
@@ -4,6 +4,11 @@
 
 nz-card:first-of-type ::ng-deep {
   .ant-card-body {
+    // TODO: implement ngClass toggle for min-height, depending on how many total
+    // records the table will need to display. setting a universal min-height here
+    // will result in some tables with a lot of whitespace, if they're displaying
+    // a couple rows (as in the case with some Assertions tables)
+    min-height: 30em;
     // remove card body padding
     padding: 0;
     // card title has a -1 bottom margin for some reason, partially occluding nz-description's top border
