--- a/client/src/app/views/assertions/assertions-home/assertions-home.page.html
+++ b/client/src/app/views/assertions/assertions-home/assertions-home.page.html
@@ -11,7 +11,7 @@
   </ng-container>
 </ng-template>
 
-<nz-page-header class="site-page-header" cvcAutoHeightDiv>
+<nz-page-header class="site-page-header">
   <nz-page-header-content>
     <!-- title, description, docs links -->
     <nz-row class="header-content">
