--- a/client/src/app/views/variants/variants-home/variants-home.page.html
+++ b/client/src/app/views/variants/variants-home/variants-home.page.html
@@ -1,5 +1,5 @@
 <cvc-section-navigation> </cvc-section-navigation>
-<nz-page-header class="site-page-header">
+<nz-page-header class="site-page-header" cvcAutoHeightDiv>
 
   <!--content-->
   <nz-page-header-content>
